--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
     {% include links.html %}
 
     <p>
-      <span>Etoile_xx's Blog</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator">Etoile</a>
+      <span>Etoile_xx's Blog</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg>
     </p>
 </footer>
 
